tests/test116.rael.exp
Error [1:17]: Index too big
| log 12 to 12 at 1
|                 ^
